.happypack/s-1408860190
SyntaxError: Unexpected token (58:56)

[0m [90m 56 | [39m        [33m<[39m[33mCol[39m xs[33m=[39m{[35m12[39m} lg[33m=[39m{[35m4[39m} key[33m=[39m{i}[33m>[39m
 [90m 57 | [39m          [33m<[39m[33ma[39m href[33m=[39m{obj[33m.[39msrc} onClick[33m=[39m{(e) [33m=>[39m [36mthis[39m[33m.[39mopenLightbox(i[33m,[39m e)}[33m>[39m
[31m[1m>[22m[39m[90m 58 | [39m            [33m<[39m[33mimg[39m src[33m=[39m{obj[33m.[39mthumbnail} className[33m=[39m{classes[33m.[39m}[33m/[39m[33m>[39m
 [90m    | [39m                                                        [31m[1m^[22m[39m
 [90m 59 | [39m          [33m<[39m[33m/[39m[33ma[39m[33m>[39m
 [90m 60 | [39m        [33m<[39m[33m/[39m[33mCol[39m[33m>[39m
 [90m 61 | [39m      )[33m;[39m[0m

BabelLoaderError: SyntaxError: Unexpected token (58:56)

[0m [90m 56 | [39m        [33m<[39m[33mCol[39m xs[33m=[39m{[35m12[39m} lg[33m=[39m{[35m4[39m} key[33m=[39m{i}[33m>[39m
 [90m 57 | [39m          [33m<[39m[33ma[39m href[33m=[39m{obj[33m.[39msrc} onClick[33m=[39m{(e) [33m=>[39m [36mthis[39m[33m.[39mopenLightbox(i[33m,[39m e)}[33m>[39m
[31m[1m>[22m[39m[90m 58 | [39m            [33m<[39m[33mimg[39m src[33m=[39m{obj[33m.[39mthumbnail} className[33m=[39m{classes[33m.[39m}[33m/[39m[33m>[39m
 [90m    | [39m                                                        [31m[1m^[22m[39m
 [90m 59 | [39m          [33m<[39m[33m/[39m[33ma[39m[33m>[39m
 [90m 60 | [39m        [33m<[39m[33m/[39m[33mCol[39m[33m>[39m
 [90m 61 | [39m      )[33m;[39m[0m

    at transpile (/home/leo/htdocs/bio/node_modules/babel-loader/lib/index.js:61:13)
    at Object.module.exports (/home/leo/htdocs/bio/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/home/leo/htdocs/bio/node_modules/loader-runner/lib/LoaderRunner.js:119:14)